--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,8 @@ body {
     transition: .5s ease-out;
 }
 
+/*
+
 @media only screen and (max-width: 412px) {
     #navbar {
       right: 0;
@@ -249,7 +251,12 @@ body {
     }
   }
 
+  */
+
   @media only screen and (max-width: 360px) {
+    body {
+        width: 100%;
+    }
     #navbar {
       right: 0;
     }
