--- a/styles.css
+++ b/styles.css
@@ -254,6 +254,12 @@ body {
   */
 
   @media only screen and (max-width: 360px) {
+
+    body::-webkit-scrollbar {
+        -ms-text-overflow-style: none;
+        scrollbar-width: none;
+    }
+
     #navbar {
       right: 0;
     }
@@ -263,11 +269,11 @@ body {
        left: 0;
        padding-left: 2rem;
        padding-right: 2rem;
-       width: 220%;
+       width: 215%;
        height: auto;
     }
     #projects-container {
-        width: 220%;
+        width: 215%;
         padding-top: 16rem;
     }
     #projects-container-div{
@@ -280,10 +286,9 @@ body {
     #links {
         background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(34,34,32,1) 50%, rgba(34,34,32,1) 100%);
         position: absolute;
-        top: 312rem;
-        width: 220%;
-        height: 90%;
-
+        top: 315rem;
+        width: 215%;
+        height: 80%;
     }
     #links li {
         text-align: center;
