--- a/styles.css
+++ b/styles.css
@@ -301,3 +301,56 @@ body {
         top: 3rem;
     }
   }
+
+  @media only screen and (min-width: 1920px) {
+
+    body::-webkit-scrollbar {
+        -ms-text-overflow-style: none;
+        scrollbar-width: none;
+    }
+
+    #navbar {
+      right: 0;
+    }
+    #introduction {
+       position: absolute;
+       top: 0;
+       left: 0;
+       padding-left: 2rem;
+       padding-right: 2rem;
+       width: 100%;
+       height: auto;
+    }
+    #projects-container {
+        width: 100%;
+        padding-top: 10rem;
+    }
+    #projects-container-div{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 6rem;
+        padding-top: 4rem;
+    }
+    #links {
+        background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(34,34,32,1) 50%, rgba(34,34,32,1) 100%);
+        position: absolute;
+        top: 160rem;
+        width: 100%;
+        height: 80%;
+    }
+    #links li {
+        text-align: center;
+        margin: 2rem;
+        font-size: 1.5rem;
+        font-weight: bold;
+        display: inline-block;
+        position: relative;
+        left: 38rem;
+        top: 3rem;
+    }
+    #link-hover {
+        padding-bottom: 0;
+        margin-bottom: -5rem;
+    }
+  }
