--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ body {
     z-index: 1;
 }
 
+
 #introduction p {
     color: #F0EAD6;
     text-align: center;
@@ -45,6 +46,16 @@ body {
     z-index: 1;
 }
 
+#introduction li:hover {
+    transform: scale(1.3);
+}
+
+#introduction li {
+    transition: .5s ease-out;
+}
+
+
+
 #introduction ul {
     list-style: none;
 }
@@ -57,6 +68,7 @@ body {
     margin-bottom: 22px;
     font-size: 1.5rem;
     font-weight: bold;
+    margin-right: 3rem;
 }
 
 #introduction ul li > a {
@@ -104,7 +116,7 @@ body {
 }
 
 #line-seperator {
-    border-bottom: 3px solid #F0EAD6;
+    border-bottom: 5px solid #F0EAD6;
     margin: 0 auto;
     margin-bottom: 5rem;
     width: 50%;
@@ -115,12 +127,13 @@ body {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 3rem;
+    margin-left: -1px;
 }
 
 #projects-container-div img{
     height: 75%;
     max-width: 100%;
-    object-fit: cover;
+    object-fit: fill;
     border: 1px solid black;
 }
 
@@ -130,7 +143,7 @@ body {
     font-size: 30px;
     background-color: gray;
     padding: 1rem;
-    margin-top: -0.5rem;
+    margin-top: -0.4rem;
 }
 
 #project-link {
@@ -139,10 +152,12 @@ body {
     background-color: none;
     outline: medium none;
     margin: 2rem;
+    
 }
 
 #hover-effect:hover{
     transform: scale(1.1);
+    outline: none;
 }
 
 #hover-effect {
@@ -159,6 +174,7 @@ body {
     top: 130rem;
     width: 100%;
     height: 100%;
+    margin-top: -10rem;
 }
 
 #links h1 {
